log/build_2024-08-19_08-03-12/py_srvcli/stderr.log
  File "/home/tj/ros2_ws/install/py_srvcli/lib/python3.10/site-packages/py_srvcli/client_member_function.py", line 30
    	minimal_client.get_logger().info(
    	                                ^
SyntaxError: '(' was never closed

Sorry: TabError: inconsistent use of tabs and spaces in indentation (service_member_function.py, line 14)
